Update for indexed CVs